--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="flex flex-col gap-12 col-span-4  md:w-2/3">
                 <div>
                     <h4 class="text-grey text-sm">WHERE I'M FROM</h4>
-                    <p class="text-lg">I was born and raised in Bilbao, Spain, until the age of 13, when I moved to a
+                    <p class="">I was born and raised in Bilbao, Spain, until the age of 13, when I moved to a
                         boarding school in the south of France. Over the following six years, I studied art and design
                         in diferent cities and schools: École Estienne in Paris, ESADHaR in Le Havre, and éSAD in
                         Amiens. Graduating with a Master's in UI/UX
@@ -118,7 +118,7 @@
                 </div>
                 <div>
                     <h4 class="text-grey text-sm">WHAT I USED TO DO</h4>
-                    <p class="text-lg">I'm deeply interested in exploring alternative ways of building websites and
+                    <p class="">I'm deeply interested in exploring alternative ways of building websites and
                         interfaces — starting from small ideas and building them from scratch. My thesis,
                         <a
                            href="https://pablo.energy/thewebwewant"
@@ -131,9 +131,19 @@
                 </div>
                 <div>
                     <h4 class="text-grey text-sm">WHERE I'M NOW</h4>
-                    <p class="text-lg">This second year in the city asked me to diversify my work related collaborations
-                        and focus on more handcoded-websites. In this new phase, I'm looking to work with studios or
-                        freelancers where I can bring my ideas, skills, and energy to interesting digital projects.</p>
+                    <p class="">
+                        After a year of designing and learning at the polished <a
+                           href="https://analogueagency.com/"
+                           class="hover:text-grey duration-300 inline" target="_blank">Analogue
+                            Agency </a> — where I
+                        crafted
+                        identities and built websites on Framer — I've entered a new phase that's pushing me to
+                        diversify my collaborations and working more on hand-coded websites. I'm now looking to work
+                        with
+                        studios and freelancers around Amsterdam where I can bring my ideas, skills and energy to
+                        expressive digital work, while stepping a bit outside the agency bubble and connecting with new
+                        creative peers.
+                    </p>
                 </div>
             </div>
 
