--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PABLO MORENO</title>
+    <title>pablo.energy</title>
 
     <!-- <link rel="icon" type="image/webp" href="/assets/favicon/favicon-96x96.webp" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
