--- a/index.html
+++ b/index.html
@@ -111,22 +111,32 @@
                     <h4 class="text-grey text-sm">WHERE I'M FROM</h4>
                     <p class="">I was born and raised in Bilbao, Spain, until the age of 13, when I moved to a
                         boarding school in the south of France. Over the following six years, I studied art and design
-                        in diferent cities and schools: École Estienne in Paris, ESADHaR in Le Havre, and éSAD in
-                        Amiens. Graduating with a Master's in UI/UX
-                        Design, I pursued my life in Amsterdam, where I began working at Analogue Agency.
+                        in diferent cities: Bayonne, Paris, Le Havre and Amiens. Graduating with a Master's in
+                        UI/UX
+                        Design, I pursued my life in Amsterdam, where I began working as a junior designer.
                     </p>
                 </div>
                 <div>
                     <h4 class="text-grey text-sm">WHAT I USED TO DO</h4>
-                    <p class="">I'm deeply interested in exploring alternative ways of building websites and
-                        interfaces — starting from small ideas and building them from scratch. My thesis,
-                        <a
-                           href="https://pablo.energy/thewebwewant"
-                           class="italic hover:text-grey duration-300" data-slideframe="true"
-                           title="The Web We Want" data-slideframe-bound="true">The Web We
-                            Want</a>, reflects on the notion of the designer-maker as a response to today's digital
-                        landscape,
-                        proposing a more playful and meaningful web culture.
+                    <p>
+                        During my studies journey, I began with a degree in Graphic Design at the
+                        <a href="https://www.ecole-estienne.paris/" class="hover:text-grey duration-300 inline"
+                           target="_blank">École Estienne</a>,
+                        followed by a Bachelor's in Interactive Design at
+                        <a href="https://esadhar.fr/" class="hover:text-grey duration-300 inline"
+                           target="_blank">ESADHaR</a>.
+                        I completed my studies with a professional double Master's in UI/UX shared between
+                        the <a href="https://www.esad-amiens.fr/" class="hover:text-grey duration-300 inline"
+                           target="_blank">ÉSAD Amiens</a>
+                        and <a href="https://www.utc.fr/" class="hover:text-grey duration-300 inline"
+                           target="_blank">UTC</a>,
+                        during which I wrote my thesis
+                        <a href="https://pablo.energy/thewebwewant" class="italic hover:text-grey duration-300"
+                           data-slideframe="true" title="The Web We Want" data-slideframe-bound="true">
+                            The Web We Want</a>,
+                        reflecting on the notion of the designer-coder as a response to today's increasingly "templated"
+                        web landscape.
+                    </p>
                     </p>
                 </div>
                 <div>
