--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                         I completed my studies with a professional double Master's in UI/UX shared between
                         the <a href="https://www.esad-amiens.fr/" class="hover:text-grey duration-300 inline"
                            target="_blank">ÉSAD Amiens</a>
-                        and <a href="https://www.utc.fr/" class="hover:text-grey duration-300 inline"
-                           target="_blank">UTC</a>,
+                        and the <a href="https://www.utc.fr/" class="hover:text-grey duration-300 inline"
+                           target="_blank">UTC Compiègne</a>,
                         during which I wrote my thesis
                         <a href="https://pablo.energy/thewebwewant" class="italic hover:text-grey duration-300"
                            data-slideframe="true" title="The Web We Want" data-slideframe-bound="true">
