--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             Agency </a> — where I
                         crafted
                         identities and built websites on Framer — I've entered a new phase that's pushing me to
-                        diversify my collaborations and working more on hand-coded websites. I'm now looking to work
+                        diversify my collaborations and working on more hand-coded websites. I'm now looking to work
                         with
                         studios and freelancers around Amsterdam where I can bring my ideas, skills and energy to
                         expressive digital work, while stepping a bit outside the agency bubble and connecting with new
