--- a/index.html
+++ b/index.html
@@ -844,6 +844,10 @@
                         <span class="text-lg leading-tight">Voorburgstraat 123<br>
                             Amsterdam</span>
                     </div>
+                    <div>
+                        <h4 class="text-grey text-sm uppercase">KvK registration</h4>
+                        <span class="text-lg leading-tight">99361248</span>
+                    </div>
                 </div>
             </div>
 
