--- a/kwikstep-race/index.html
+++ b/kwikstep-race/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KWIKSTEP RACE 🔜</title>
+    <title>KWIKSTEP RACE</title>
 
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="index.css">
