--- a/kwikstep-race/index.html
+++ b/kwikstep-race/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KWIKSTEP RACE</title>
+    <title>KWIKSTEP RACE 🔜</title>
 
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="index.css">
@@ -26,8 +26,6 @@
 
     <div class="info">
         <img src="media/kwikstep.gif" alt="">
-
-
         <div>
             <h1>KWIKSTEP RACE 🔜</h1>
 
@@ -35,10 +33,11 @@
 
             <form name="subscription" method="POST" data-netlify="true">
                 <input type="email" name="email" required placeholder="your e-mail">
+                <input type="text" name="city" required placeholder="your city">
                 <input type="submit" value="Receive news!">
             </form>
 
-            <small>The 𝒦wikstep ℛide 𝒜ssociation ©</small>
+            <!-- <small>The 𝒦wikstep ℛide 𝒜ssociation ©</small> -->
 
         </div>
 
